# ADEPT-Agentic-Detection-Engineering-Orchestration-Pipeline-and-Tuning

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Mermaid.js  README.md  SETUP_CHECKLIST.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  ci.yml.disabled
adept/: __init__.py
adept/agent/: __init__.py  approval.py  audit.py  cli.py  evaluator.py  history.py  llm.py  mcp_client.py  service.py  specialists.py  state.py  supervisor.py
adept/attack/: __init__.py  atomic.py  caldera.py  models.py  service.py
adept/config/: __init__.py  settings.py
adept/coverage/: __init__.py  attack_data.py  baseline.py  cli.py  dettect.py  gaps.py  matrix.py  models.py  navigator.py  overlap.py  rules.py
adept/detection_as_code/: __init__.py  backtest.py  cli.py  converter.py  lifecycle.py  matcher.py  models.py  pipelines.py  targets.py  unit_tests.py  validator.py
adept/eval/: __init__.py  cli.py  golden.py  models.py  scenarios.py
adept/guardrails/: __init__.py  _text.py  git.py  lucene.py  models.py  navigator.py  registry.py  sigma.py  spl.py
adept/intel/: __init__.py  attack.py  http.py  kev.py  models.py  news.py  nvd.py  service.py
adept/kb/: __init__.py  cli.py  embeddings.py  models.py  service.py  sources.py  store.py
adept/mcp_server/: __init__.py  auth.py  context.py  resources.py  server.py  sigma_repo.py
adept/mcp_server/siem/: __init__.py  _lucene.py  _payloads.py  base.py  elk.py  models.py  opensearch.py  registry.py  splunk.py
adept/mcp_server/tools/: __init__.py  _annotations.py  attack_tools.py  coverage_tools.py  dac_tools.py  intel_tools.py  kb_tools.py  siem_tools.py  sigma_git_tools.py
adept/shared/: __init__.py  cache.py  errors.py  logging.py  notify.py  observability.py  ratelimit.py
docs/: code_review_guide.md  homelab_architecture.md  live_integration_smoke_test.md  technical.md  workflow_nontechnical.md
tests/: conftest.py  test_agent.py  test_attack.py  test_config.py  test_coverage.py  test_detection_as_code.py  test_eval.py  test_guardrails.py  test_intel.py  test_kb.py  test_mcp_server.py  test_shared.py  test_siem_backends.py  test_sigma_repo.py
